demo/allow-ui.yaml
kind: NetworkPolicy
apiVersion: net.alpha.kubernetes.io/v1alpha1
metadata:
  namespace: default
  name: allow-ui 
spec:
  podSelector:
  ingress:
    - from:
        - namespaces:
            role: collect-ui
