demo/backend-policy.yaml
kind: NetworkPolicy
apiVersion: net.alpha.kubernetes.io/v1alpha1
metadata:
  namespace: default
  name: backend-policy
spec:
  podSelector:
    tier: backend
  ingress:
    - from:
        - pods:
            tier: frontend
        - namespaces:
            role: collect-ui
      ports:
        - protocol: TCP
          port: 6379
