demo/frontend-policy.yaml
kind: NetworkPolicy
apiVersion: net.alpha.kubernetes.io/v1alpha1
metadata:
  namespace: default
  name: frontend-policy
spec:
  podSelector:
    role: collect-ui
  ingress:
    - from:
        - pods:
            tier: frontend
        - namespaces:
            role: collect-ui
        - namespaces:
            role: client
      ports:
        - protocol: TCP
          port: 80
